--- a/UnownScanner/UnownScanner/Base.lproj/LaunchScreen.storyboard
+++ b/UnownScanner/UnownScanner/Base.lproj/LaunchScreen.storyboard
@@ -22,8 +22,8 @@
                                     <constraint firstAttribute="height" constant="291" id="izw-5X-nNV"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QRScanner" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u6f-gp-QnQ">
-                                <rect key="frame" x="95" y="445.5" width="185.5" height="42"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unown Scanner" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u6f-gp-QnQ">
+                                <rect key="frame" x="59" y="445.5" width="257.5" height="42"/>
                                 <fontDescription key="fontDescription" name="GurmukhiMN" family="Gurmukhi MN" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
